--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="title_activity_xa_geo_web_chrome_client">XaGeoWebChromeClient</string>
     <string name="param_base_url">senta-secure.com</string>
 
-    <string name="app_name" translatable="false">DataExtractor</string>
+    <string name="app_name" translatable="false">SentaData</string>
     <string name="action_settings" translatable="false">Settings</string>
     <string name="hello" translatable="false">Hello</string>
 
@@ -30,7 +30,6 @@
     <string name="please_enter_a_valid_url">Please enter a valid url</string>
     <string name="sending_data_to_senta_secure_server">Sending data to Senta secure server…</string>
     <string name="set_demo_user">Set demo user</string>
-    <string name="accept_agreement">Accept Agreement</string>
     <string name="eula_text">This application is released under the GPL, as such it is provided
         with no warranty and no liability regarding its fitness for purpose.\n
         \n
